helm-values/keycloak/keycloak-dev-ingress-alb.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: auth
  name: keycloak-sandbox-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: sandbox-app
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/load-balancer-name: sandbox-kubernetes
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:165232864651:certificate/badba7c0-5cf9-4d64-ad90-47a31af7c3c7
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/tags: env=sandbox
    # alb.ingress.kubernetes.io/healthcheck-path: /info/version
    # alb.ingress.kubernetes.io/success-codes: "200"
    # alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    # alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    # nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    # nginx.ingress.kubernetes.io/x-forwarded-prefix: "true"
spec:
  rules:
    - host: dev.auth.portal.powerbiz.asia
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bn-keycloak
                port:
                  number: 80
